# alex311-visibility

./: .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: launch.json
dashboard/: app.py  submit.html  submit.py
dashboard/static/: index.html
deploy/: README.md
docs/: submission-optionc-poc.md  submission-prototype.md
scripts/: gen_icons.py
spike/: FINDINGS.md  phase0_spike.py
src/alex311/: __init__.py  client.py  db.py  health.py  ingest.py  media_store.py  models.py  schema.sql  submit_browser.py
tests/: test_client.py  test_dashboard.py  test_media.py  test_models.py
