[project]
name = "alex311-visibility"
version = "0.1.0"
description = "Data-visibility portal for Alexandria VA Alex311 service requests"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pillow>=10.4",
    "pillow-heif>=0.18",
]

[project.optional-dependencies]
gcs = ["google-cloud-storage>=2.16"]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alex311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
